# very_very_simple_server

./: CMakeLists.txt  Dockerfile  README.md  httpd.conf  main.cpp
include/: ConfigHelper.h  ConnectStructs.h  FileReader.h  HttpRequest.h  SafeQueue.h  Server.h  ServerSocket.h  Worker.h
src/: Server.cpp  ServerSocket.cpp  Worker.cpp
